--- a/client/src/App.css
+++ b/client/src/App.css
@@ -141,14 +141,14 @@ section {
 .dataContainer {
   margin-right: 0;
   margin-left: 0;
-  color: #272727;
+  color: #474747;
   display: flex;
   align-items: center;
   font-size: 20px;
 }
 
 .dataContainer li {
-  margin-bottom: 40px;
+  margin-bottom: 5%;
 }
 
 .data {
@@ -157,11 +157,12 @@ section {
 }
 
 .aboutContainer {
+  color: #474747;
   width: 50%;
 }
 
 .cv a:hover {
-  color: rgb(7, 31, 47);
+  color: #474747;
   text-decoration: none;
 }
 
@@ -274,9 +275,14 @@ section {
   font-weight: 200;
   position: relative;
   top: 0;
-  padding: 25px;
+  padding: 1.2%;
   animation: fadeInRight 1s cubic-bezier(0.77, 0, 0.175, 1) 1;
   margin: 20px auto;
+}
+
+.skills li div{
+  width: 38%;
+  margin: 0 auto;
 }
 
 .skills img:hover {
@@ -301,6 +307,7 @@ section {
 .contactContainer {
   margin: 0 0 auto auto;
   background-color: #f5f5f5;
+  height: 100vh;
 }
 
 .contactTitle {
@@ -421,16 +428,24 @@ section {
 }
 
 .footer {
-  background-color: #f5f5f5;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 50px;
+  width: 100%;  
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 100;
+  border-top: 1px solid #00a1a7;
+  color: #ececec;
+  transform: 300ms 0ms;
+  margin-bottom: 0;
 }
 
-.hidden {
-  display: none;
-}
 
 /*MEDIA*/
 
-@media (max-width: 700px) {
+
+@media (max-width: 1023px) {
   .nombre-profesion h1 {
     font-size: 40px;
   }
@@ -452,25 +467,25 @@ section {
   }
 
   .imageContainer {
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
   }
 
   .dataContainer {
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
     color: #272727;
     display: inline-block;
   }
 
   .aboutContainer {
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
   }
 
   .iconsDetail,
   .lean-logo {
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
   }
 
@@ -499,5 +514,17 @@ section {
   .skills li {
     width: 30%;
     padding: 15px;
+  }
+
+.skills li div {
+    width: 50%
+}
+
+  
+}
+
+@media (max-width: 450px){
+.skills li div {
+    width: 100%
   }
 }
